--- a/desafio-front-end/cadastro-cowala/src/components/Form.css
+++ b/desafio-front-end/cadastro-cowala/src/components/Form.css
@@ -2,14 +2,37 @@
   background-color: #EDEDED;
   display: flex;
   flex-direction: column;
+  height: 400px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 80px;
-  max-width: 70vw;
+  max-width: 80vw;
   padding: 20px;
   width: 100%;
 }
 
 .container-inputs {
   display: flex;
+}
+
+.btnIP {
+  background-color: #00D9D0;
+  border: none;
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  padding: 10px;
+  width: 100%;
+}
+
+.btnsSalvarLimpar {
+  background-color: #0A1633;
+  border: none;
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  padding: 10px;
+  width: 100%;
 }
