--- a/desafio-front-end/cadastro-cowala/src/components/Form.css
+++ b/desafio-front-end/cadastro-cowala/src/components/Form.css
@@ -11,17 +11,36 @@
   width: 100%;
 }
 
+.form {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  width: 30vw;
+}
+
+.inputStyle {
+  border: 1px solid #c8d3e4;
+  height: 12px;
+  padding: 12px;
+}
+
 .container-inputs {
   display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.container-btns {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
 }
 
 .btnIP {
   background-color: #00D9D0;
   border: none;
   color: white;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
+  margin-top: 20px;
   padding: 10px;
   width: 100%;
 }
@@ -30,8 +49,6 @@
   background-color: #0A1633;
   border: none;
   color: white;
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 10px;
   padding: 10px;
   width: 100%;
